--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Freddy Guapi",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0"
   },
